--- a/views/includes/topnav.pug
+++ b/views/includes/topnav.pug
@@ -57,7 +57,7 @@
                 i.fas.fa-unlock-alt
                 | &nbsp; admin
               .dropdown-menu(aria-labelledby='navbarDropdownMenuLink')
-                a.dropdown-item(href="/competitions")  
+                a.dropdown-item(href="/competitions/manage")  
                   i.fas.fa-check-circle
                   | &nbsp; 공모전 관리
                 //- a.dropdown-item(href='#') 
