--- a/views/competitions/_answer.pug
+++ b/views/competitions/_answer.pug
@@ -25,6 +25,4 @@
         | answered on #{moment(answer.createdAt).format('YYYY-MM-DD')}
         if answer.author
           | 
-          | by #[a(href=`/users/${answer.author.id}`)= answer.author.name]
-
-
+          | by #{answer.author.name}
